--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -8,6 +8,28 @@ h2,h3,h4,h5
   padding: 0
 
 @media all and (min-width: 1px)
+  header
+    position: fixed
+    z-index: 99
+    width: 100%
+    left: 0
+    right: 0
+    top: 0
+    padding: 20px 0
+    transition: all ease-in .3s
+    > div
+      position: relative
+
+      .logo_activo
+        position: absolute
+        top: 0
+        left: 0
+        opacity: 0
+  
+  .whiteHeader
+    background-color: $whiteColor
+    border-bottom: 2px solid #eee 
+    padding: 10px 0
   // Colores
   .greenColor
     color: $greenColor
@@ -78,7 +100,8 @@ h2,h3,h4,h5
   .ventajas,
   .dashboard,
   .vision,
-  .optmimiza_wrapp
+  .optmimiza_wrapp,
+  .contact
     margin-top: 5vw
     > h3
       font-family: $fontTercera
@@ -261,6 +284,59 @@ h2,h3,h4,h5
         &::before,
         &::after
           display: none
+  
+  .contact
+    form
+      margin-top: 10px
+      i
+        background-color: #eeeeee
+        border: 1px solid #cccccc
+        border-radius: 4px 0px 0px 4px
+        font-size: 1.3rem
+        height: 31px
+        color: #555
+        min-width: 30px
+        margin-right: -1px
+      input,
+      textarea
+        padding: 5px
+        border: 1px rgba(0, 0, 0, 0.2) solid
+        height: 33px
+        display: block
+        font-size: 1.4rem
+      
+      textarea
+        height: 202px
+      .textarea
+        height: 200px
+      .submit
+        width: 100%
+        margin: 10px 0
+        height: 50px
+        border-radius: 4px
+        cursor: pointer
+        text-transform: capitalize
+
+  footer
+    background-color: #2d2d2d
+    color: $whiteColor
+    font-size: 1.3rem
+    padding: 20px 0
+    margin-top: 40px
+
+  .upArrow
+    position: fixed
+    right: 5px
+    bottom: 30px
+    background-color: rgba($blackColor, .8)
+    width: 45px
+    height: 45px
+    color: $whiteColor
+    font-size: 2rem
+    opacity: 0
+    z-index: 99
+  .activeUp
+    opacity: 1 !important
 
 @media all and (min-width: 500px)
   .bxslider
