--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -337,6 +337,17 @@ h2,h3,h4,h5
     z-index: 99
   .activeUp
     opacity: 1 !important
+  
+  .loading
+    position: fixed
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    background-color: $magentaColor
+    color: $whiteColor
+    opacity: 0
+    z-index: -9
 
 @media all and (min-width: 500px)
   .bxslider
