--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,17 @@ h2, h3, h4, h5 {
   .activeUp {
     opacity: 1 !important;
   }
+  .loading {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #dd2f42;
+    color: #ffffff;
+    opacity: 0;
+    z-index: -9;
+  }
 }
 
 @media all and (min-width: 500px) {
